# kgithub-notify

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  a.out  fix_c  fix_c.cpp  parse_qt  parse_qt.cpp  patch2.py  plan_review.md  test_settings.cpp  test_url.cpp  test_url2.cpp  test_xml  test_xml.cpp
.github/workflows/: ci.yml
.jules/: Dockerfile
src/: ActionWindow.cpp  ActionWindow.h  DebugWindow.cpp  DebugWindow.h  GitHubClient.cpp  GitHubClient.h  MainWindow.cpp  MainWindow.h  NewIssueDialog.cpp  NewIssueDialog.h  Notification.h  NotificationItemWidget.cpp  NotificationItemWidget.h  NotificationListWidget.cpp  NotificationListWidget.h  NotificationWindow.cpp  NotificationWindow.h  PopupNotification.cpp  PullRequestWindow.cpp  PullRequestWindow.h  RepoListWindow.cpp  RepoListWindow.h  SecureString.h  SettingsDialog.cpp  SettingsDialog.h  WorkItemWindow.cpp  WorkItemWindow.h  com.arran4.kgithub_notify.metainfo.xml  kgithub-notify.desktop  kgithub-notifyui.rc  main.cpp  resources.qrc
src/trending/: TrendingWindow.cpp  TrendingWindow.h
tests/: MockNetworkReply.h  TestGitHubClient.cpp
